--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/redes.css">
 
-    <title>DAW</title>
+    <title>Inversiones Automotrices</title>
 </head>
 
 <body>
@@ -121,7 +121,7 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                         </div>
-                        <img src="/img/head.jpg" class="img-fluid" alt="portfolio 1">
+                        <img src="img/head.jpg" class="img-fluid" alt="portfolio 1">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -152,19 +152,19 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                         </div>
-                        <img src="/img/head.jpg" class="img-fluid" alt="portfolio 1">
+                        <img src="img/head.jpg" class="img-fluid" alt="portfolio 1">
                     </div>
                 </div>
             </div>
             <div class="text-center topmargin-sm pt-5">
-                <img src="/img/iaa2.png" alt="" srcset="">
+                <img src="img/iaa2.png" alt="" srcset="">
             </div>
 
     </section>
     <section id="aboutus" class="bg-light-grey">
         <div class="container">
             <div class="content-center">
-                <img src="/img/0.png" alt="" srcset="">
+                <img src="img/0.png" alt="" srcset="">
                 <hr>
                 <p>Nuestro ambiente laboral es fundamental para continuar siendo un equipo unido
                     innovando constantemente para mantenernos a la vanguardia y brindar el mejor servicio a nuestros
