--- a/html/contacto.html
+++ b/html/contacto.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="/index.html"><b>Inicio</b></a>
+                        <a class="nav-link" href="https://ivonne06.github.io/proyecto-daw/index.html"><b>Inicio</b></a>
                     </li>
 
                     <li class="nav-item ">
