--- a/html/contacto.html
+++ b/html/contacto.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="img/iaa3.png" logo-brand" alt="logo"></a>
+            <a class="navbar-brand" href="https://ivonne06.github.io/proyecto-daw/index.html"><img src="img/iaa3.png" logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
