--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/redes.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/redes.css">
 
 
     <title>Inversiones Automotrices</title>
@@ -25,7 +25,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="/img/iaa3.png" logo-brand" alt="logo"></a>
+            <a class="navbar-brand" href="/proyecto-daw/index.html"><img src="/img/iaa3.png" logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="/index.html"><b>Inicio</b></a>
+                        <a class="nav-link" href="/proyecto-daw/index.html"><b>Inicio</b></a>
                     </li>
 
                     <li class="nav-item ">
