--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/normalize.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/style.css">
     <link rel="stylesheet" href="/proyecto-daw/css/redes.css">
 
 
