--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -25,7 +25,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/proyecto-daw/index.html"><img src="/img/iaa3.png" logo-brand" alt="logo"></a>
+            <a class="navbar-brand" href="/proyecto-daw/index.html"><img src="/proyecto-daw/img/iaa3.png" logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -160,7 +160,7 @@
     <section id="aboutus" class="bg-light-grey">
         <div class="container">
             <div class="content-center">
-                <img src="/img/0.png" alt="" srcset="">
+                <img src="/proyecto-daw/img/0.png" alt="" srcset="">
                 <hr>
                 <p>Nuestro ambiente laboral es fundamental para continuar siendo un equipo unido
                     innovando constantemente para mantenernos a la vanguardia y brindar el mejor servicio a nuestros
