--- a/html/desa.html
+++ b/html/desa.html
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/redes.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/normalize.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/style.css">
+    <link rel="stylesheet" href="/proyecto-daw/css/redes.css">
 
     <title>Inversiones Automotrices</title>
 </head>
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="/img/iaa3.png" logo-brand" alt="logo"></a>
+            <a class="navbar-brand" href="/proyecto-daw/index.html"><img src="/proyecto-daw/img/iaa3.png" logo-brand" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="/index.html"><b>Inicio</b></a>
+                        <a class="nav-link" href="/proyecto-daw/index.html"><b>Inicio</b></a>
                     </li>
 
                     <li class="nav-item ">
@@ -91,13 +91,13 @@
         <h3>Boris Eduardo Aguirre Galeas</h3>
         <br>
         <h3><b>AG190748</b></h3>
-        <img src="/img/jack.jpg" height="250px" width="250px">
+        <img src="/proyecto-daw/img/jack.jpg" height="250px" width="250px">
         <br>
         <br>
         <h3>Ivonne Estefany Delgado Landaverde</h3>
         <br>
         <h3><b>DL191114</b></h3>
-        <img src="/img/ivon.jpeg" height="250px" width="250px">
+        <img src="/proyecto-daw/img/ivon.jpeg" height="250px" width="250px">
 
 
 
@@ -107,7 +107,7 @@
 
 
         <div class="text-center topmargin-sm pt-5">
-            <img src="/img/iaa2.png" alt="" srcset="">
+            <img src="/proyecto-daw/img/iaa2.png" alt="" srcset="">
         </div>
 
 
@@ -123,7 +123,7 @@
     <section id="aboutus" class="bg-light-grey">
         <div class="container">
             <div class="content-center">
-                <img src="/img/0.png" alt="" srcset="">
+                <img src="/proyecto-daw/img/0.png" alt="" srcset="">
                 <hr>
                 <p>Nuestro ambiente laboral es fundamental para continuar siendo un equipo unido
                     innovando constantemente para mantenernos a la vanguardia y brindar el mejor servicio a nuestros
